src/objects/c2g__codaJournal__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpjournal</customHelpPage>
    <description>Acts as a container for a number of journal lines and provides common information about the document.</description>
    <fields>
        <fullName>Depreciation_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Depreciation Schedule</label>
        <referenceTo>FAM__FA_Depreciation_Schedule__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fixed_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fixed Asset</label>
        <referenceTo>FAM__Fixed_Asset__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocation</label>
        <referenceTo>c2g__Allocation__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CanceledJournal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the Journal has been canceled by a cancelling Journal</description>
        <label>Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Credits__c</fullName>
        <label>Credits</label>
        <summarizedField>c2g__codaJournalLineItem__c.c2g__Value__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaJournalLineItem__c.c2g__Value__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaJournalLineItem__c.c2g__Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Debits__c</fullName>
        <label>Debits</label>
        <summarizedField>c2g__codaJournalLineItem__c.c2g__Value__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaJournalLineItem__c.c2g__Value__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaJournalLineItem__c.c2g__Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveCurrency__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DerivePeriod__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DiscardReason__c</fullName>
        <label>Discard Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DualRate__c</fullName>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalCounterparty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>External Counterparty.</description>
        <label>External Counterparty</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__IncomeScheduleGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>c2g__codaGroupingReference__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__JournalCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A journal is expressed in a currency</description>
        <label>Journal Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__JournalDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The effective date for the journal</description>
        <label>Journal Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__JournalDescription__c</fullName>
        <description>A description for the whole document</description>
        <label>Journal Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__JournalRate__c</fullName>
        <label>Journal Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__JournalStatus__c</fullName>
        <description>The posting status</description>
        <label>Journal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Ready To Post</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__OriginalJournal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Journal Number</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Journals (Original Journal)</relationshipLabel>
        <relationshipName>CancellingJournals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OverrideCurrency1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Currency 1</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Journals (Override Currency 1)</relationshipLabel>
        <relationshipName>Journals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OverrideCurrency2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Currency 2</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Journals (Override Currency 2)</relationshipLabel>
        <relationshipName>Journals2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OverrideCurrency3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Currency 3</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Journals (Override Currency 3)</relationshipLabel>
        <relationshipName>Journals3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OverrideDebitValue1__c</fullName>
        <label>Override Debit Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OverrideDebitValue2__c</fullName>
        <label>Override Debit Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OverrideDebitValue3__c</fullName>
        <label>Override Debit Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__RecurringJournalSourceJournal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the source journal of a recurring journal</description>
        <label>Recurring Journal Source Journal Number</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Journals (Recurring Journal Source Journal Number)</relationshipLabel>
        <relationshipName>RecurringJournals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Reference__c</fullName>
        <description>A reference, possibly to an external document</description>
        <label>Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SourceJournal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Journal Number</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Journals (Source Journal Number)</relationshipLabel>
        <relationshipName>ReversingJournals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Tax1Total__c</fullName>
        <label>Tax 1 Total</label>
        <summarizedField>c2g__codaJournalLineItem__c.c2g__TaxValue1__c</summarizedField>
        <summaryForeignKey>c2g__codaJournalLineItem__c.c2g__Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Tax2Total__c</fullName>
        <label>Tax 2 Total</label>
        <summarizedField>c2g__codaJournalLineItem__c.c2g__TaxValue2__c</summarizedField>
        <summaryForeignKey>c2g__codaJournalLineItem__c.c2g__Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Tax3Total__c</fullName>
        <label>Tax 3 Total</label>
        <summarizedField>c2g__codaJournalLineItem__c.c2g__TaxValue3__c</summarizedField>
        <summaryForeignKey>c2g__codaJournalLineItem__c.c2g__Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TaxableValueTotal__c</fullName>
        <label>Taxable Value Total</label>
        <summarizedField>c2g__codaJournalLineItem__c.c2g__TaxableValue__c</summarizedField>
        <summaryForeignKey>c2g__codaJournalLineItem__c.c2g__Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Total__c</fullName>
        <label>Total</label>
        <summarizedField>c2g__codaJournalLineItem__c.c2g__Value__c</summarizedField>
        <summaryForeignKey>c2g__codaJournalLineItem__c.c2g__Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual Journal</fullName>
                    <default>true</default>
                    <label>Manual Journal</label>
                </value>
                <value>
                    <fullName>Cash Matching Journal</fullName>
                </value>
                <value>
                    <fullName>Cancelling Journal</fullName>
                </value>
                <value>
                    <fullName>Income Schedule</fullName>
                </value>
                <value>
                    <fullName>Reversing Journal</fullName>
                </value>
                <value>
                    <fullName>Reconciliation Journal</fullName>
                </value>
                <value>
                    <fullName>Year End Journal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitofWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Year__c</fullName>
        <formula>c2g__Period__r.c2g__YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Journal</label>
    <listViews>
        <fullName>FF_100_Bruntwood_Management_Services_L_codaJournal</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 100 - Bruntwood Management Services L</label>
        <queue>FF_100_Bruntwood_Management_Services_L</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_106_Bruntwood_Management_Services_3_codaJournal</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 106 - Bruntwood Management Services(3</label>
        <queue>FF_106_Bruntwood_Management_Services_3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_110_Manchester_Science_Partnerships_codaJournal</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 110 - Manchester Science Partnerships</label>
        <queue>FF_110_Manchester_Science_Partnerships</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_112_Mi_IDEA_Limited_codaJournal</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 112 - Mi-IDEA Limited</label>
        <queue>FF_112_Mi_IDEA_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_113_Citylabs_2_0_Limited_codaJournal</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 113 - Citylabs 2.0 Limited</label>
        <queue>FF_113_Citylabs_2_0_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_115_Manchester_Technopark_Ltd_codaJournal</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 115 - Manchester Technopark Ltd</label>
        <queue>FF_115_Manchester_Technopark_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_125_Salford_Innovation_Park_Ltd_codaJournal</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 125 - Salford Innovation Park Ltd</label>
        <queue>FF_125_Salford_Innovation_Park_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_130_Principal_Agent_Management_Ltd_codaJournal</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 130 - Principal Agent Management Ltd</label>
        <queue>FF_130_Principal_Agent_Management_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_135_Alderley_Park_Holdings_Ltd_codaJournal</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 135 - Alderley Park Holdings Ltd</label>
        <queue>FF_135_Alderley_Park_Holdings_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_139_Alderley_Imaging_Limited_codaJournal</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 139 - Alderley Imaging Limited</label>
        <queue>FF_139_Alderley_Imaging_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_140_Alderley_Park_Limited_codaJournal</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 140 - Alderley Park Limited</label>
        <queue>FF_140_Alderley_Park_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_141_Circle_Square_District_Holdings_codaJournal</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 141 - Circle Square District Holdings</label>
        <queue>FF_141_Circle_Square_District_Holdings</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_142_Circle_Square_District_Company_codaJournal</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 142 - Circle Square District Company</label>
        <queue>FF_142_Circle_Square_District_Company</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_143_Circle_Square_Green_Company_Ltd_codaJournal</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 143 - Circle Square Green Company Ltd</label>
        <queue>FF_143_Circle_Square_Green_Company_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_144_Bruntwood_Circle_Square_2_Limit_codaJournal</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 144 - Bruntwood Circle Square 2 Limit</label>
        <queue>FF_144_Bruntwood_Circle_Square_2_Limit</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>JNL{000000}</displayFormat>
        <label>Journal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>